[package]
name = "yarner-block-links"
version = "0.1.0"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
edition = "2018"

[dependencies]
handlebars = "3.5"
serde = { version = "1.0", features = ["derive"] }
regex = "1.4"
once_cell = "1.5"
yarner-lib = { git = "https://github.com/mlange-42/yarner.git", rev = "e6a0e5d" }
