[package]
name = "yarner-block-links"
version = "0.1.2"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
readme = "README.md"
description = "A Yarner plugin that adds to each code block a list of links to all referenced and all referencing blocks"
keywords = ["markdown", "literate-programming", "plugin"]
homepage = "https://github.com/mlange-42/yarner-block-links/"
repository = "https://github.com/mlange-42/yarner-block-links/"
license = "MIT"
edition = "2018"
exclude = [".github"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
handlebars = "3.5"
serde = { version = "1.0", features = ["derive"] }
regex = "1.4"
once_cell = "1.5"
yarner-lib = "0.5.2"
